--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function MM_swapImage() { //v3.0
        <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('definicon','','imagenes/definicion2.jpg',1)"><img src="imagenes/definicon3.jpg" width="274" height="184" id="definicon"></a> </div>
   </div>
      <div data-role="footer" data-theme="b" data-position="fixed">
-       <h4> Aplicacion uno, MAHH</div>
+       <h4> Aplicacion Dos, MAHH</div>
 </div>
      </div>
   <!-- </div>-->
@@ -186,7 +186,7 @@ function MM_swapImage() { //v3.0
 <p>Así ademas de la propia antena emisora y receptora de señal, los Smartphones de hoy en día vienen equipados con antenas de posicionamiento GPS, conectividad WiFi, Capacidad para enviar y recibir archivos de manera inalámbrica, tanto por Wifi como por Bluetooth, cámaras integradas de gran calidad y resolución, tanto de imagen como de video.
    <p> Todo esto al alcance de cualquiera, ya que si en un principio cuando nació la telefonía móvil, tenías que ser prácticamente millonario para disponer de uno de esos gigantescos aparatos, ahora en la actualidad, y gracias a la terrible competencia en el sector, se han rebajado los precios de manera considerable, poniendo esta tecnología al alcance de casi cualquier economía, tanto que no se concibe la vida en occidente sin este pequeño aparato, y es común y habitual su uso en la vida cotidiana y rutinaria.</h4> </div>
     <div data-role="footer" data-theme="b" data-position="fixed">
-     <h4>Aplicacion uno,MAHH</h4>
+     <h4>Aplicacion Dos,MAHH</h4>
      </div>
     </div>
    </div>
@@ -261,7 +261,7 @@ function MM_swapImage() { //v3.0
      </div></h4>
      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','imagenes/gama2.jpg',1)"><img src="imagenes/gama3.jpg" width="40%" height="40%" id="Image9"></a>
 <div data-role="footer" data-theme="b" data-position="fixed">
-      <h4> Aplicacion uno, MAHH</h4></div>
+      <h4> Aplicacion Dos, MAHH</h4></div>
 </div>
      <!--</div>-->
    </div>
@@ -289,7 +289,7 @@ function MM_swapImage() { //v3.0
        <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Ima','','imagenes/compania1.jpg',1)"><img src="imagenes/companias3.jpg" width="50%" height="35%" id="Ima"></a> </div>
   </div>
      <div data-role="footer" data-theme="b" data-position="fixed">
-       <h4> Aplicacion uno, MAHH</h4></div>
+       <h4> Aplicacion Dos, MAHH</h4></div>
 </div>
      <!--</div>-->
    </div>
@@ -329,7 +329,7 @@ function MM_swapImage() { //v3.0
        Este prototipo permitiría enviar formas del teléfono a otros usuarios, por ejemplo si quieres mandarle un corazón a tu novia, sólo haz que tu teléfono se convierta en un corazón. De momento no saldrá al mercado.</p></h4>
   </div>
      <div data-role="footer" data-theme="b" data-position="fixed">
-       <h4> Aplicacion uno, MAHH</h4></div>
+       <h4> Aplicacion Dos, MAHH</h4></div>
 </div>
      <!--</div>-->
    </div>
